--- a/styles/style.css
+++ b/styles/style.css
@@ -1,30 +1,33 @@
 body{
     display: grid;
-    grid-template: 1fr 4fr / 1fr 3fr;
+    grid-template: 1fr 4fr / 1fr 4fr;
 
 }
 
 .sidebar{
-    grid-area: 1 / 1 / 5 / 2;
+    grid-area: 1 / 1 / -1 / 2;
     background-color: red;
 }
 
 .header{
-    grid-area: 1 / 2 / 1 / 5;  
+    grid-area: 1 / 2 / 1 / -1;  
     background-color: green;
 }
 
 .main-content{
     display: grid;
-    grid-area: 2 / 2 / 5 / 5 ;
+    grid-template-columns: 3fr 1fr;
+    grid-area: 2 / 2 / -1 / -1 ;
     background-color: blue;
 }
 
 .main-left{
-    grid-column: 2 / 3;
+    grid-column: 1 / 2;
+    border: solid 1px; black;
 }
 
 .main-right{
-    grid-column: 3 / 4;
+    grid-column: 2 / 3;
+    border: solid 1px; black;
 
 }
