--- a/styles/style.css
+++ b/styles/style.css
@@ -3,18 +3,59 @@ body{
     grid-template: 1fr 4fr / 1fr 4fr;
 }
 
+ul{
+    list-style-type: none;
+}
+
+input{
+    width: 300px;
+}
+
+.material-symbols-outlined {
+    font-variation-settings:
+    'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 48
+}
+
 .sidebar{
-    grid-area: 1 / 1 / -1 / 2;
+    grid-area: 1 / 1 / 3 / 2;
     background-color: red;
 }
 
+.logo{
+    display: grid;
+    grid-template: 1fr / 1fr 1fr;
+}
+
+.nav-sub{
+    margin-top: 50px;
+
+}
+
 .header{
-    grid-area: 1 / 2 / 1 / -1;  
+    grid-area: 1 / 2 / 1 / 3;  
     background-color: green;
 }
 
 .header-top{
     border: solid 1px black;
+    display: grid;
+    grid-template-columns: 6fr 1fr 1fr 1fr;
+}
+
+.notification{
+    border: solid 1px black;
+}
+
+.profile-img{
+    border: solid 1px black;
+}
+
+.username{
+    border: solid 1px black;
+
 }
 
 .header-bottom{
@@ -22,7 +63,7 @@ body{
 }
 
 .main-content{
-    grid-area: 2 / 2 / -1 / -1 ;
+    grid-area: 2 / 2 / 3 / 3 ;
     background-color: blue;
     
     display: grid;
@@ -35,6 +76,7 @@ body{
 }
 
 .main-right{
-    grid-column: 2 / -1;
+    grid-column: 2 / 3;
     border: solid 1px black;
 }
+
