--- a/styles/style.css
+++ b/styles/style.css
@@ -12,13 +12,11 @@ input{
     width: 300px;
 }
 
-.material-symbols-outlined {
-    font-variation-settings:
-    'FILL' 0,
-    'wght' 400,
-    'GRAD' 0,
-    'opsz' 8
-}
+
+/* ======================
+            Sidebar  
+   ====================== */
+
 
 .sidebar{
     grid-area: 1 / 1 / 3 / 2;
@@ -28,29 +26,49 @@ input{
 .logo{
     display: grid;
     grid-template: 1fr / 1fr 1fr;
+    border: solid 1px black;
+}
+
+.nav-main{
+    border: solid 1px black;
 }
 
 .nav-sub{
     margin-top: 50px;
+    border: solid 1px black;
 }
+
+
+/* ====================== 
+            Header    
+   ====================== */
+
 
 .header{
     grid-area: 1 / 2 / 1 / 2;  
     background-color: green;
 }
 
+
+/* ====================== 
+        Top-half */
+
 .header-top{
     border: solid 1px black;
     display: grid;
-    grid-template-columns: 6fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 6fr 1fr 1fr 1fr;
     align-items:center;
+}
+
+.search-bar{
+    border: solid 1px black;
 }
 
 .notification{
     border: solid 1px black;
 }
 
-.profile-img{
+.profile-img-s{
     border: solid 1px black;
 }
 
@@ -59,15 +77,18 @@ input{
 
 }
 
+
+/* ====================== 
+      Bottom-half */
+
 .header-bottom{
     border: solid 1px black;
     display: grid;
     grid-template-columns: 1fr 3fr 2fr;
     align-items:center;
-
 }
 
-.profile-img-big{
+.profile-img-l{
     border: solid 1px black;
 }
 
@@ -78,6 +99,12 @@ input{
 .buttons{
     border:solid 1px black;
 }
+
+
+/* ====================== 
+        Main content    
+   ====================== */
+
 
 .main-content{
     grid-area: 2 / 2 / 3 / 3 ;
