--- a/styles/style.css
+++ b/styles/style.css
@@ -8,9 +8,11 @@ ul{
     list-style-type: none;
 }
 
+
 input{
     width: 300px;
 }
+
 
 
 /* ======================
@@ -30,6 +32,14 @@ input{
 }
 
 .nav-main{
+    border: solid 1px black;
+}
+
+.nav-main li{
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: 1fr;
+
     border: solid 1px black;
 }
 
@@ -114,13 +124,73 @@ input{
     grid-template-columns: 3fr 1fr;
 }
 
+
+/* ====================== 
+      Main left side */
+
 .main-left{
     grid-column: 1 / 2;
     border: solid 1px black;
 }
 
-.main-right{
-    grid-column: 2 / 3;
+.title{
+    font-weight: 800;
+    border: solid 1px white;
+}
+
+.projects{
     border: solid 1px black;
 }
 
+.project{
+    border: solid 1px black;
+}
+
+.project-title{
+    border: solid 1px black;
+}
+
+.project ul{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    border: solid 1px black;
+}
+
+
+/* ====================== 
+      Main right side */
+
+.main-right{
+    grid-column: 2 / 3;
+    border: solid 1px black;
+    background-color: orange;
+}
+
+
+/* ====================== 
+      Announcements */
+
+.announcements{
+    border:solid 1px black;
+    background-color: pink;
+}
+
+.announcement{
+    border: solid 1px black;
+
+}
+
+
+/* ====================== 
+        Trending */
+
+.trending{
+    border:solid 1px black;
+}
+
+.trend{
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    border: solid 1px black;
+}
