--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,12 @@
+
+
 body{
     margin: 0;
     display: grid;
-    grid-template: 1fr 4fr / 1fr 4fr;
+    grid-template: 1fr 1fr / 1fr 4fr;
+
+    font-family: 'Roboto', sans-serif;
+    font-family: 'Source Code Pro', monospace;
 }
 
 ul{
@@ -13,6 +18,11 @@ input{
     width: 300px;
 }
 
+p{
+    margin: 0;
+    padding: 0;
+}
+
 
 
 /* ======================
@@ -22,41 +32,61 @@ input{
 
 .sidebar{
     grid-area: 1 / 1 / 3 / 2;
-    background-color: red;
+    background-color: rgb(2, 162, 255);
+    color: white;
 }
 
 .logo{
+    font-size: 1.4em;
+    font-weight: 700;
     display: grid;
-    grid-template: 1fr / 1fr 1fr;
-    border: solid 1px black;
+    grid-template: 1fr / 1fr 2fr;
+
 }
 
 .nav-main{
-    border: solid 1px black;
+    font-size: 1.2em;
+    font-weight: 700;
+}
+
+.nav-main ul{
+    padding: 0px 0px 0px 20px;
 }
 
 .nav-main li{
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 1fr 4fr;
     grid-template-rows: 1fr;
-
-    border: solid 1px black;
+   
+    height: 50px;
+    align-items: center;
 }
 
 .material-symbols-outlined{
     color: white;
 }
 
+.project-buttons .material-symbols-outlined{
+    color: black;
+}
+
 .nav-sub {
-    margin-top: 50px;
+    font-size: 1.2em;
+    font-weight: 700;
 }
 
 .nav-sub li{
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 1fr 4fr;
     grid-template-rows: 1fr;
     
-    border: solid 1px black;
+    height: 50px;
+    align-items: center;
+}
+
+.nav-sub ul{
+    padding: 40px 0px 0px 20px;
+
 }
 
 
@@ -67,7 +97,7 @@ input{
 
 .header{
     grid-area: 1 / 2 / 1 / 2;  
-    background-color: green;
+    background-color: rgb(255, 255, 255);
 }
 
 
@@ -90,7 +120,6 @@ input{
 }
 
 .profile-img-s{
-    border: solid 1px black;
 }
 
 .username{
@@ -129,7 +158,7 @@ input{
 
 .main-content{
     grid-area: 2 / 2 / 3 / 3 ;
-    background-color: blue;
+    background-color: rgb(240, 240, 240);
     
     display: grid;
     grid-template-columns: 3fr 1fr;
@@ -141,31 +170,45 @@ input{
 
 .main-left{
     grid-column: 1 / 2;
-    border: solid 1px black;
+    padding: 20px;
+    
 }
 
 .title{
-    font-weight: 800;
-    border: solid 1px white;
+    font-weight: 700;
 }
 
+
 .projects{
-    border: solid 1px black;
+     display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
+
 }
 
 .project{
-    border: solid 1px black;
+    width: 300px;
+    height: 180px;
+    padding: 20px;
+    margin: 10px 10px 10px 0px;
+
+    box-shadow: 5px 10px 6px 1px  rgba(107, 107, 107, 0.2);
+    background-color: white;
+    border-left: solid 6px orange;
+    border-radius: 10px;
 }
 
 .project-title{
-    border: solid 1px black;
+    font-weight: 700;
+
 }
 
 .project ul{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 6fr 1fr 1fr;
     grid-template-rows: 1fr;
-    border: solid 1px black;
+
+    justify-items: end;
+
 }
 
 
@@ -174,8 +217,10 @@ input{
 
 .main-right{
     grid-column: 2 / 3;
-    border: solid 1px black;
-    background-color: orange;
+    background-color: rgb(240, 240, 240);
+    font-size: 1em;
+    padding: 20px;
+
 }
 
 
@@ -183,12 +228,29 @@ input{
       Announcements */
 
 .announcements{
-    border:solid 1px black;
-    background-color: pink;
+    width: 280px;
+    font-size: .6em;
+    margin-bottom: 20px;
+    margin-top: 10px;
+    padding: 20px 0px 10px 0px;
+
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
+    box-shadow: 5px 10px 6px 1px  rgba(107, 107, 107, 0.2);
+
+    display: grid;
+    justify-content: center;
 }
 
 .announcement{
-    border: solid 1px black;
+    width: 180px;
+    border-bottom: solid 1px rgb(212, 212, 212);
+    margin: 10px;
+}
+
+.announcement-last{
+    width: 180px;
+    margin: 10px;
 
 }
 
@@ -197,11 +259,37 @@ input{
         Trending */
 
 .trending{
-    border:solid 1px black;
+    width: 260px;
+    font-size: .8rem;
+
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
+    box-shadow: 5px 10px 6px 1px  rgba(107, 107, 107, 0.2);
+
+    padding: 10px; 
+    margin-top: 10px;
+
 }
 
 .trend{
     display: grid;
     grid-template-columns: 1fr 3fr;
-    border: solid 1px black;
+    grid-template-rows: 1fr;
+    height: 50px;
+    margin: 20px;
+
+}
+
+.trend-adress{
+    height: 20px;
+    margin-left: 20px;
+    font-weight: 700;
+
+}
+
+.trend-name{
+    height: 20px;
+    margin-left: 20px;
+
+
 }
