--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,7 @@
 body{
     margin: 0;
     display: grid;
-    grid-template: 1fr 1fr / 1fr 4fr;
+    grid-template: 1fr / 1fr 4fr;
 
     font-family: 'Roboto', sans-serif;
     font-family: 'Source Code Pro', monospace;
@@ -23,6 +23,16 @@ p{
     padding: 0;
 }
 
+button{
+    background-color: rgb(2, 162, 255);
+    color: white;
+    font-weight: 700;
+    font-size: 1em;
+    width: 80px;
+    height: 36px;
+    border-radius: 16px;
+    border: 0;
+}
 
 
 /* ======================
@@ -70,6 +80,10 @@ p{
     color: black;
 }
 
+.header .material-symbols-outlined{
+    color: black;
+}
+
 .nav-sub {
     font-size: 1.2em;
     font-weight: 700;
@@ -98,6 +112,8 @@ p{
 .header{
     grid-area: 1 / 2 / 1 / 2;  
     background-color: rgb(255, 255, 255);
+    box-shadow: 5px 2px 10px 1px  rgba(107, 107, 107, 0.2);
+    z-index: 2;
 }
 
 
@@ -105,25 +121,31 @@ p{
         Top-half */
 
 .header-top{
-    border: solid 1px black;
     display: grid;
-    grid-template-columns: 6fr 1fr 1fr 1fr;
+    grid-template-columns: 6fr 1fr 1fr 2fr;
     align-items:center;
+    margin-left: 20px;
+    
+
 }
 
 .search-bar{
-    border: solid 1px black;
 }
 
 .notification{
-    border: solid 1px black;
+    display: grid;
+    justify-content: center;
 }
 
 .profile-img-s{
+    display: grid;
+    justify-content: center;
+
 }
 
 .username{
-    border: solid 1px black;
+    font-weight: 700;
+    display: grid;
 
 }
 
@@ -132,22 +154,23 @@ p{
       Bottom-half */
 
 .header-bottom{
-    border: solid 1px black;
     display: grid;
     grid-template-columns: 1fr 3fr 2fr;
     align-items:center;
+    margin-left: 20px;
+
 }
 
 .profile-img-l{
-    border: solid 1px black;
 }
 
 .username{
-    border: solid 1px black;
+
 }
 
 .buttons{
-    border:solid 1px black;
+    display: grid;
+    grid-auto-flow: column;
 }
 
 
@@ -180,7 +203,7 @@ p{
 
 
 .projects{
-     display: grid;
+    display: grid;
     grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
 
 }
