--- a/styles/style.css
+++ b/styles/style.css
@@ -1,318 +1,5 @@
-
-
-body{
-    margin: 0;
-    display: grid;
-    grid-template: 1fr / 1fr 4fr;
-
-    font-family: 'Roboto', sans-serif;
-    font-family: 'Source Code Pro', monospace;
-}
-
-ul{
-    list-style-type: none;
-}
-
-
-input{
-    width: 300px;
-}
-
-p{
+*{
     margin: 0;
     padding: 0;
-}
-
-button{
-    background-color: rgb(2, 162, 255);
-    color: white;
-    font-weight: 700;
-    font-size: 1em;
-    width: 80px;
-    height: 36px;
-    border-radius: 16px;
-    border: 0;
-}
-
-
-/* ======================
-            Sidebar  
-   ====================== */
-
-
-.sidebar{
-    grid-area: 1 / 1 / 3 / 2;
-    background-color: rgb(2, 162, 255);
-    color: white;
-}
-
-.logo{
-    font-size: 1.4em;
-    font-weight: 700;
-    display: grid;
-    grid-template: 1fr / 1fr 2fr;
-
-}
-
-.nav-main{
-    font-size: 1.2em;
-    font-weight: 700;
-}
-
-.nav-main ul{
-    padding: 0px 0px 0px 20px;
-}
-
-.nav-main li{
-    display: grid;
-    grid-template-columns: 1fr 4fr;
-    grid-template-rows: 1fr;
-   
-    height: 50px;
-    align-items: center;
-}
-
-.material-symbols-outlined{
-    color: white;
-}
-
-.project-buttons .material-symbols-outlined{
-    color: black;
-}
-
-.header .material-symbols-outlined{
-    color: black;
-}
-
-.nav-sub {
-    font-size: 1.2em;
-    font-weight: 700;
-}
-
-.nav-sub li{
-    display: grid;
-    grid-template-columns: 1fr 4fr;
-    grid-template-rows: 1fr;
-    
-    height: 50px;
-    align-items: center;
-}
-
-.nav-sub ul{
-    padding: 40px 0px 0px 20px;
-
-}
-
-
-/* ====================== 
-            Header    
-   ====================== */
-
-
-.header{
-    grid-area: 1 / 2 / 1 / 2;  
-    background-color: rgb(255, 255, 255);
-    box-shadow: 5px 2px 10px 1px  rgba(107, 107, 107, 0.2);
-    z-index: 2;
-}
-
-
-/* ====================== 
-        Top-half */
-
-.header-top{
-    display: grid;
-    grid-template-columns: 6fr 1fr 1fr 2fr;
-    align-items:center;
-    margin-left: 20px;
-    
-
-}
-
-.search-bar{
-}
-
-.notification{
-    display: grid;
-    justify-content: center;
-}
-
-.profile-img-s{
-    display: grid;
-    justify-content: center;
-
-}
-
-.username{
-    font-weight: 700;
-    display: grid;
-
-}
-
-
-/* ====================== 
-      Bottom-half */
-
-.header-bottom{
-    display: grid;
-    grid-template-columns: 1fr 3fr 2fr;
-    align-items:center;
-    margin-left: 20px;
-
-}
-
-.profile-img-l{
-}
-
-.username{
-
-}
-
-.buttons{
-    display: grid;
-    grid-auto-flow: column;
-}
-
-
-/* ====================== 
-        Main content    
-   ====================== */
-
-
-.main-content{
-    grid-area: 2 / 2 / 3 / 3 ;
-    background-color: rgb(240, 240, 240);
-    
-    display: grid;
-    grid-template-columns: 3fr 1fr;
-}
-
-
-/* ====================== 
-      Main left side */
-
-.main-left{
-    grid-column: 1 / 2;
-    padding: 20px;
-    
-}
-
-.title{
-    font-weight: 700;
-}
-
-
-.projects{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
-
-}
-
-.project{
-    width: 300px;
-    height: 180px;
-    padding: 20px;
-    margin: 10px 10px 10px 0px;
-
-    box-shadow: 5px 10px 6px 1px  rgba(107, 107, 107, 0.2);
-    background-color: white;
-    border-left: solid 6px orange;
-    border-radius: 10px;
-}
-
-.project-title{
-    font-weight: 700;
-
-}
-
-.project ul{
-    display: grid;
-    grid-template-columns: 6fr 1fr 1fr;
-    grid-template-rows: 1fr;
-
-    justify-items: end;
-
-}
-
-
-/* ====================== 
-      Main right side */
-
-.main-right{
-    grid-column: 2 / 3;
-    background-color: rgb(240, 240, 240);
-    font-size: 1em;
-    padding: 20px;
-
-}
-
-
-/* ====================== 
-      Announcements */
-
-.announcements{
-    width: 280px;
-    font-size: .6em;
-    margin-bottom: 20px;
-    margin-top: 10px;
-    padding: 20px 0px 10px 0px;
-
-    background-color: rgb(255, 255, 255);
-    border-radius: 10px;
-    box-shadow: 5px 10px 6px 1px  rgba(107, 107, 107, 0.2);
-
-    display: grid;
-    justify-content: center;
-}
-
-.announcement{
-    width: 180px;
-    border-bottom: solid 1px rgb(212, 212, 212);
-    margin: 10px;
-}
-
-.announcement-last{
-    width: 180px;
-    margin: 10px;
-
-}
-
-
-/* ====================== 
-        Trending */
-
-.trending{
-    width: 260px;
-    font-size: .8rem;
-
-    background-color: rgb(255, 255, 255);
-    border-radius: 10px;
-    box-shadow: 5px 10px 6px 1px  rgba(107, 107, 107, 0.2);
-
-    padding: 10px; 
-    margin-top: 10px;
-
-}
-
-.trend{
-    display: grid;
-    grid-template-columns: 1fr 3fr;
-    grid-template-rows: 1fr;
-    height: 50px;
-    margin: 20px;
-
-}
-
-.trend-adress{
-    height: 20px;
-    margin-left: 20px;
-    font-weight: 700;
-
-}
-
-.trend-name{
-    height: 20px;
-    margin-left: 20px;
-
-
+    box-sizing: border-box;
 }
