--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300;700&display=swap');
+
+
+/* ===================
+      Global Styles 
+   =================== */
+
 *{
     margin: 0;
     padding: 0;
@@ -5,24 +12,61 @@
 }
 
 body{
-
+    font-family: 'Source Code Pro', monospace;
 }
 
+
+aside h1, h3{
+    color: white;
+    padding-left: 20px;
+    
+}
+
+aside h1{
+    padding-left: 10px;
+}
+
+aside li{
+    padding: 10px;
+
+    display: grid;
+    grid-template-columns: 20px auto;
+}
+
+.material-symbols-outlined {
+    color: white;
+
+    font-variation-settings:
+    'FILL' 1,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 48
+}
+
+
 /* ===================
-    Custom Properties */
+    Custom Properties 
+   =================== */
 
 :root{
     --header-background-color: red;
-    --header-height: 140px;
+    --header-height: 120px;
     
     --sidebar-background-color: blue;
     --sidebar-width: 260px;
+    
+    --logo-icon-dimension: 50px;    /* Logo-icons width AND height */
     
     --main-left-background-color: green;
     --main-left-width: 3fr;
     --main-right-background-color: yellow;
     --main-right-width: 1fr;
 }
+
+
+/* ===================
+         Layout 
+   =================== */
 
 .container{
     display: grid;
@@ -32,8 +76,7 @@ body{
 
 
 /* ===================
-          Header
-   =================== */
+          Header    */
 
 header{
     background-color: var(--header-background-color);
@@ -42,47 +85,71 @@ header{
     display: grid;
 }
 
+    /*  Header Top  */
+
 .header-top{
     grid-area: 1 / 1 / 1 / 3;
 
-    border: solid 1px black;
 }
+
+    /* Header Bottom    */
 
 .header-bottom{
     grid-area: 2 / 1 / 2 / 3;
 
-    border: solid 1px black;
-
 }
 
 
 /* ===================
-        Sidebar
-   =================== */
+        Sidebar     */
 
 aside{
     background-color: var(--sidebar-background-color);
 
-    grid-area: 1 / 1 / 3 / 1;
+    grid-area: 1 / 1 / 3 / 2;
 }
 
 .sidebar-logo-container{
-    border: solid 1px black;
+    margin: 10px;
 
+    display: grid;
+    grid-template-columns: var(--logo-icon-dimension) auto;
+}
+
+.logo-icon{
+    width: var(--logo-icon-dimension);
+    height: var(--logo-icon-dimension);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+#logo-icon-large{
+    font-size:48px;
+}
+
+.logo-text{
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    
 }
 
 .sidebar-nav-top{
-    border: solid 1px black;
-
+    margin: 50px 0 50px 20px;
+    
 }
 
 .sidebar-nav-bottom{
-    border: solid 1px black;
+    margin: 0 0 0 20px;
 
 }
+
+
 /* ===================
-          Main
-   =================== */
+          Main      */
 
 main{
     background-color: var(--main-background-color);
@@ -91,20 +158,16 @@ main{
     grid-template-columns: var(--main-left-width) var(--main-right-width);
 }
 
-/* ===================
-        Main Left   */
+    /*  Main Left   */
 
 .main-left{
     background-color: var(--main-left-background-color);
-    border: solid 1px black;
 
 }
 
-/* ===================
-        Main Right  */
+    /*  Main Right  */
 
 .main-right{
     background-color: var(--main-right-background-color);
-    border: solid 1px black;
 
 }
