--- a/styles/style.css
+++ b/styles/style.css
@@ -15,11 +15,22 @@ body{
     font-family: 'Source Code Pro', monospace;
 }
 
+header h3{
+    color: #333;
+}
+
+input{
+    background-color: #ddd;
+    width: 460px;
+    height: 32px;
+    margin-left: 12px;
+    border: 0;
+    border-radius: 12px;
+}
 
 aside h1, h3{
     color: white;
     padding-left: 20px;
-    
 }
 
 aside h1{
@@ -55,12 +66,14 @@ aside li{
     --sidebar-background-color: blue;
     --sidebar-width: 260px;
     
-    --logo-icon-dimension: 50px;    /* Logo-icons width AND height */
+    --logo-icon-dimension: 48px;    /* Logo-icon's width AND height */
+    --avatar-dimension: 50px;       /* Avatar's width AND height */
     
     --main-left-background-color: green;
     --main-left-width: 3fr;
     --main-right-background-color: yellow;
     --main-right-width: 1fr;
+
 }
 
 
@@ -83,6 +96,7 @@ header{
     
     grid-area: 1 / 2 / 2 / 3;
     display: grid;
+    grid-template-rows: 1fr 1fr;
 }
 
     /*  Header Top  */
@@ -90,6 +104,35 @@ header{
 .header-top{
     grid-area: 1 / 1 / 1 / 3;
 
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    padding: 16px;
+}
+
+.header-top-search{
+    display: grid;
+    grid-template-columns: 50px auto;
+    justify-content: center;
+    align-items: center;
+    padding-right: 28px;
+}
+
+#label-searchbar{
+    position: relative;
+    top: 4px;
+    padding: 0 0 0 20px;
+}
+
+.header-top-options{
+    display: grid;
+    grid-template-columns: 60px 60px 180px;
+    justify-content: center;
+    align-items: center;
+}
+
+.user-avatar img{
+    width: var(--avatar-dimension);
+    height: var(--avatar-dimension);
 }
 
     /* Header Bottom    */
@@ -134,7 +177,7 @@ aside{
     display: flex;
     justify-content: start;
     align-items: center;
-    
+
 }
 
 .sidebar-nav-top{
