--- a/styles/style.css
+++ b/styles/style.css
@@ -116,12 +116,14 @@ aside li{
 }
 
 article{
-    border: solid 1px black;
     background-color: var(--article-background-color);
 
     width: 340px;
     height: 200px;
     padding: 20px;
+    border-radius: 10px;
+    border-left: solid 6px #e75c0c;
+    box-shadow: 3px 3px 4px #cacaca;
 
     display: grid;
     grid-template-rows:1fr 1fr 3fr;
@@ -155,7 +157,6 @@ header{
 
 .header-top{
     grid-area: 1 / 1 / 1 / 3;
-
     display: grid;
     grid-template-columns: 2fr 1fr;
     padding: 10px;
@@ -167,6 +168,7 @@ header{
     justify-content: center;
     align-items: center;
     padding-right: 28px;
+    
 }
 
 #label-searchbar{
@@ -175,11 +177,20 @@ header{
     padding: 0 0 0 20px;
 }
 
+#label-searchbar span{
+    color: #333;
+}
+
 .header-top-options{
     display: grid;
     grid-template-columns: 60px 60px 170px;
     justify-content: center;
     align-items: center;
+    
+}
+
+.message-alert span{
+    color: #333;
 }
 
 .user-avatar-small img{
@@ -302,10 +313,16 @@ main{
     padding: 20px 0 0 20px;
 }
 
+.project-options span{
+    margin-left: 20px;
+    color: #333;
+}
+
 .project-options{
     display: flex;
     justify-content: end;
     align-items: end;
+
 }
 
     /*  Main Right  */
