--- a/styles/style.css
+++ b/styles/style.css
@@ -83,7 +83,8 @@ aside h1, h3{
     padding: 0;
 }
 
-.projects-title h3{
+.projects-title h3,
+.announce-title h3{
     padding: 0;
     font-size: 1.2em;
     color: var(--header-text-color)
@@ -91,6 +92,7 @@ aside h1, h3{
 
 .project-title h3{
     padding: 0;
+    margin: 20px 0 20px 0;
     color: var(--header-text-color)
 }
 
@@ -309,7 +311,8 @@ main{
     padding: 20px;
 }
 
-.projects-title{
+.projects-title,
+.announce-title{
     padding: 20px 0 0 20px;
 }
 
@@ -330,4 +333,30 @@ main{
 .main-right{
     background-color: var(--main-right-background-color);
 
+}
+
+.announcements{
+    background-color: var(--article-background-color);
+
+    width: 240px;
+    height: 280px;
+    padding: 30px;
+    margin-right: 20px;
+    border-radius: 10px;
+    box-shadow: 3px 3px 4px #cacaca;
+}
+
+.announcement:not(:nth-child(3)){
+    border-bottom: solid 1px #ddd;
+    margin-bottom: 10px;
+}
+
+.announcement-text{
+    font-size: .8em;
+    margin-bottom: 10px;
+}
+
+.announcement-title{
+    font-size: .8em;
+    font-weight: 700;
 }
