--- a/styles/style.css
+++ b/styles/style.css
@@ -6,8 +6,8 @@
    =================== */
 
 :root{
-    --header-background-color: #eee;
     --header-height: 160px;
+    --header-background-color: #eee;
     --header-text-color: #333;
     --header-navtext-color: #eee;
     --header-button-color:#333;
@@ -17,14 +17,18 @@
     --sidebar-width: 260px;
     
     
-    --main-left-background-color: #ddd;
     --main-left-width: 2fr;
-    --main-right-background-color: #ddd;
     --main-right-width: 1fr;
+    --main-left-background-color: #ddd;
+    --main-right-background-color: #ddd;
 
     --article-background-color: #eee;
 
-    --logo-icon-dimension: 48px;        /* Logo-icon's width AND height */
+    --box-shadow-color: #cacaca;
+
+    --hover-color-accent: #e75c0c;
+    --hover-color-nav: #444;
+
     --avatar-small-dimension: 42px;     /* Avatar's width AND height */
     --avatar-large-dimension: 64px;     /* Avatar's width AND height */
 }
@@ -76,16 +80,14 @@ button{
 }
 
 button:hover{
-    /* background-color: #666; */
+    background-color: var(--hover-color-accent);
     color: var(--header-navtext-color);
     cursor: pointer;
     font-size: .8em;
     font-weight: 700;
     width: 86px;
     height: 36px;
-    border: 0;
     border-radius: 16px;
-    border: solid 2px #e75c0c;
 }
 
 aside h1, h3{
@@ -130,19 +132,8 @@ aside li:hover{
     display: grid;
     grid-template-columns: 20px auto;
 
-    background-color: #444;
+    background-color: var(--hover-color-nav);
     border-radius: 10px;
-}
-
-
-.material-symbols-outlined {
-    color: white;
-
-    font-variation-settings:
-    'FILL' 1,
-    'wght' 400,
-    'GRAD' 0,
-    'opsz' 48
 }
 
 article{
@@ -152,11 +143,21 @@ article{
     height: 200px;
     padding: 20px;
     border-radius: 10px;
-    border-left: solid 6px #e75c0c;
-    box-shadow: 3px 3px 4px #cacaca;
+    border-left: solid 6px var(--hover-color-accent);
+    box-shadow: 3px 3px 4px var(--box-shadow-color);
 
     display: grid;
     grid-template-rows:1fr 1fr 3fr;
+}
+
+.material-symbols-outlined {
+    color: white;
+
+    font-variation-settings:
+    'FILL' 1,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 48
 }
 
 
@@ -177,7 +178,7 @@ article{
 
 header{
     background-color: var(--header-background-color);
-    box-shadow: 3px 3px 4px #cacaca;
+    box-shadow: 3px 3px 4px var(--box-shadow-color);
     z-index: 1;
     
     grid-area: 1 / 2 / 2 / 3;
@@ -210,7 +211,7 @@ header{
 }
 
 #label-searchbar span{
-    color: #333;
+    color: var(--header-text-color);
 }
 
 .header-top-options{
@@ -222,7 +223,12 @@ header{
 }
 
 .message-alert span{
-    color: #333;
+    color: var(--header-text-color);
+    cursor: pointer;
+}
+
+.message-alert span:hover{
+    color: var(--hover-color-accent);
     cursor: pointer;
 }
 
@@ -277,17 +283,16 @@ aside{
     margin: 10px;
 
     display: grid;
-    grid-template-columns: var(--logo-icon-dimension) auto;
+    grid-template-columns: 48px auto;
 }
 
 .logo-icon{
-    width: var(--logo-icon-dimension);
-    height: var(--logo-icon-dimension);
+    width: 48px;
+    height: 48px;
 
     display: flex;
     justify-content: center;
     align-items: center;
-
 }
 
 #logo-icon-large{
@@ -298,20 +303,17 @@ aside{
     display: flex;
     justify-content: start;
     align-items: center;
-
 }
 
 .sidebar-nav-top{
     margin: 50px 20px 20px 20px;
     padding: 0 0 20px 0;
     border-bottom: solid 1px #ddd;
-    
+
 }
 
 .sidebar-nav-bottom{
     margin: 0 20px 0 20px;
-    
-
 }
 
 
@@ -329,7 +331,6 @@ main{
 
 .main-left{
     background-color: var(--main-left-background-color);
-
 }
 
 .projects{
@@ -346,17 +347,24 @@ main{
     padding: 20px 0 0 20px;
 }
 
-.project-options span{
-    margin-left: 20px;
-    cursor: pointer;
-    color: #333;
-}
-
 .project-options{
     display: flex;
     justify-content: end;
     align-items: end;
 }
+
+.project-options span{
+    margin-left: 20px;
+    cursor: pointer;
+    color: var(--header-text-color);
+}
+
+.project-options span:hover{
+    margin-left: 20px;
+    cursor: pointer;
+    color: var(--hover-color-accent);
+}
+
 
     /*  Main Right  */
 
@@ -377,7 +385,7 @@ main{
     padding: 30px;
     margin: 20px 20px 20px 0;
     border-radius: 10px;
-    box-shadow: 3px 3px 4px #cacaca;
+    box-shadow: 3px 3px 4px var(--box-shadow-color);
 }
 
 
@@ -397,7 +405,7 @@ main{
 }
 
 .announcement-title{
-    color: #333;
+    color: var(--header-text-color);
     font-size: .8em;
     font-weight: 700;
 }
@@ -410,22 +418,20 @@ main{
     padding: 20px;
     margin: 20px 20px 20px 0;
     border-radius: 10px;
-    box-shadow: 3px 3px 4px #cacaca;
+    box-shadow: 3px 3px 4px var(--box-shadow-color);
 
     display: grid;
     grid-template-columns: 30px 4fr;
     align-items: center;
-
 }
 
 .user-info-welcome{
-    color: #333;
+    color: var(--header-text-color);
     font-weight: 700;
-
 }
 
 .trending-user-info{
-    color: #333;
+    color: var(--header-text-color);
     font-weight: 700;
 
     cursor: pointer;
